src/test/resources/insight/annotators/UnterminatedComment.soy
{namespace space}

{template .foo}
  <div>Hello!</div>
{/template}
/* This is an unterminated comment
<error descr="Unterminated comment">
</error>